[gd_scene format=3 uid="uid://jy6lnyhh8jiu"]

[ext_resource type="Script" uid="uid://brem18g4mkt7k" path="res://Scripts/mainMenuScript.gd" id="1_xim88"]
[ext_resource type="PackedScene" uid="uid://chjgqw2luivif" path="res://Scenes/CamTest2.tscn" id="2_koqhg"]
[ext_resource type="Texture2D" uid="uid://1ix82fxn6tn7" path="res://Assets/Fondos/FondoLaboratorioBack.png" id="3_cmrfp"]
[ext_resource type="Script" uid="uid://fcte2s6arj0f" path="res://Scenes/creditsScript.gd" id="3_rrcx7"]
[ext_resource type="Texture2D" uid="uid://dh2y8vf16pgis" path="res://Assets/Vitrina.png" id="4_8um5k"]
[ext_resource type="Texture2D" uid="uid://dtsq15mq1lkms" path="res://Assets/Fondos/FondoLaboratorioMain.png" id="4_loo7a"]
[ext_resource type="Texture2D" uid="uid://ct8tsbpdlsyk6" path="res://Assets/VitrinaRota.png" id="5_xim88"]
[ext_resource type="Texture2D" uid="uid://d1kp78rnak2fs" path="res://Assets/Silueta vitrina Spritesheet.PNG" id="6_koqhg"]
[ext_resource type="Texture2D" uid="uid://cus461rvgewp2" path="res://Assets/UI/Play.png" id="7_if7li"]
[ext_resource type="Texture2D" uid="uid://brnjso8yfw5tp" path="res://Assets/UI/Quit.png" id="8_rrcx7"]
[ext_resource type="Texture2D" uid="uid://di8myrrgwftj3" path="res://Assets/UI/Credits.png" id="9_fh7cp"]
[ext_resource type="Texture2D" uid="uid://tc57dy58kj8f" path="res://Assets/Spritesheets/SPRITE LEVANTANDOSE .png" id="11_if7li"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cmrfp"]
atlas = ExtResource("6_koqhg")
region = Rect2(0, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_loo7a"]
atlas = ExtResource("6_koqhg")
region = Rect2(1000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_if7li"]
atlas = ExtResource("6_koqhg")
region = Rect2(2000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_rrcx7"]
atlas = ExtResource("6_koqhg")
region = Rect2(3000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_fh7cp"]
atlas = ExtResource("6_koqhg")
region = Rect2(4000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_8e205"]
atlas = ExtResource("6_koqhg")
region = Rect2(5000, 0, 1000, 1000)

[sub_resource type="SpriteFrames" id="SpriteFrames_biyxm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cmrfp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_loo7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_if7li")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrcx7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fh7cp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8e205")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="PackedScene" id="PackedScene_fh7cp"]
_bundled = {
"conn_count": 1,
"conns": PackedInt32Array(6, 0, 26, 25, 2, 0, 0),
"editable_instances": [],
"id_paths": [],
"names": PackedStringArray("CreditsScene", "script", "Node2D", "FondoLaboratorioBack", "position", "scale", "texture", "Sprite2D", "FondoLaboratorioMain", "Vitrina", "modulate", "AnimatedSprite2D", "sprite_frames", "autoplay", "creditsText", "offset_left", "offset_top", "offset_right", "offset_bottom", "theme_override_font_sizes/font_size", "text", "horizontal_alignment", "metadata/_edit_use_anchors_", "Label", "Button", "_on_button_pressed", "pressed"),
"node_count": 7,
"node_ids": PackedInt32Array(1707684042, 496184441, 136457471, 307933614, 288439511, 1411253715, 586875341),
"node_paths": [],
"nodes": PackedInt32Array(-1, -1, 2, 0, -1, 1, 1, 0, 0, 0, 0, 7, 3, -1, 3, 4, 1, 5, 2, 6, 3, 0, 0, 0, 7, 8, -1, 3, 4, 4, 5, 5, 6, 6, 0, 0, 0, 7, 9, -1, 3, 10, 7, 4, 8, 6, 9, 0, 0, 0, 11, 11, -1, 4, 4, 10, 5, 11, 12, 12, 13, 13, 0, 0, 0, 23, 14, -1, 8, 15, 14, 16, 15, 17, 16, 18, 17, 19, 18, 20, 19, 21, 20, 22, 21, 0, 0, 0, 24, 24, -1, 6, 15, 22, 16, 23, 17, 24, 18, 25, 19, 26, 20, 27, 0),
"variants": [ExtResource("3_rrcx7"), Vector2(968, 530.5), Vector2(0.50364584, 1.0138888), ExtResource("3_cmrfp"), Vector2(963.397, 808.4821), Vector2(0.50089276, 0.5008927), ExtResource("4_loo7a"), Color(1, 1, 1, 0.9647059), Vector2(890.5, 489.5), ExtResource("4_8um5k"), Vector2(883.49994, 525.49994), Vector2(0.35, 0.35), SubResource("SpriteFrames_biyxm"), "default", -7.0, 101.0, 1926.0, 657.0, 62, "Luis Cabello - Programming and design
Diego \"Dmontec\" Montenegro - Programming
Mauro Martínez - Programming
Jill Moreno - Programming
Chao - Art
Luis Alonso - Art", 1, true, 1629.0, 930.0, 1803.0, 1007.0, 50, "Return"],
"version": 3
}

[sub_resource type="AtlasTexture" id="AtlasTexture_h1v62"]
atlas = ExtResource("6_koqhg")
region = Rect2(0, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_5hdia"]
atlas = ExtResource("6_koqhg")
region = Rect2(1000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_iqn0u"]
atlas = ExtResource("6_koqhg")
region = Rect2(2000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_3u44c"]
atlas = ExtResource("6_koqhg")
region = Rect2(3000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_bxv1r"]
atlas = ExtResource("6_koqhg")
region = Rect2(4000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_ux20s"]
atlas = ExtResource("6_koqhg")
region = Rect2(5000, 0, 1000, 1000)

[sub_resource type="SpriteFrames" id="SpriteFrames_7467j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h1v62")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5hdia")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqn0u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3u44c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bxv1r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ux20s")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_7467j"]
atlas = ExtResource("11_if7li")
region = Rect2(0, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_2x1g0"]
atlas = ExtResource("11_if7li")
region = Rect2(1000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_riqfo"]
atlas = ExtResource("11_if7li")
region = Rect2(2000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_yxkem"]
atlas = ExtResource("11_if7li")
region = Rect2(3000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_7v4os"]
atlas = ExtResource("11_if7li")
region = Rect2(4000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjscj"]
atlas = ExtResource("11_if7li")
region = Rect2(5000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_m7n2d"]
atlas = ExtResource("11_if7li")
region = Rect2(6000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_65hh5"]
atlas = ExtResource("11_if7li")
region = Rect2(7000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_6byu3"]
atlas = ExtResource("11_if7li")
region = Rect2(8000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_leunp"]
atlas = ExtResource("11_if7li")
region = Rect2(9000, 0, 1000, 1000)

[sub_resource type="SpriteFrames" id="SpriteFrames_h1v62"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7467j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2x1g0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_riqfo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yxkem")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7v4os")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjscj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m7n2d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_65hh5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6byu3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_leunp")
}],
"loop": false,
"name": &"default",
"speed": 8.0
}]

[node name="MainMenu" type="Node2D" unique_id=1600150567 node_paths=PackedStringArray("glass")]
script = ExtResource("1_xim88")
firstScene = ExtResource("2_koqhg")
CreditsScene = SubResource("PackedScene_fh7cp")
glass = NodePath("Vitrina")

[node name="FondoLaboratorioBack" type="Sprite2D" parent="." unique_id=706738149]
position = Vector2(968, 530.5)
scale = Vector2(0.50364584, 1.0138888)
texture = ExtResource("3_cmrfp")

[node name="FondoLaboratorioMain" type="Sprite2D" parent="." unique_id=527990942]
position = Vector2(963.397, 808.4821)
scale = Vector2(0.50089276, 0.5008927)
texture = ExtResource("4_loo7a")

[node name="Vitrina" type="Sprite2D" parent="." unique_id=1456659943]
modulate = Color(1, 1, 1, 0.9647059)
position = Vector2(890.5, 489.5)
texture = ExtResource("4_8um5k")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=1082921005]
position = Vector2(883.49994, 525.49994)
scale = Vector2(0.35, 0.35)
sprite_frames = SubResource("SpriteFrames_7467j")
autoplay = "default"
frame_progress = 0.8325232

[node name="VitrinaRota" type="Sprite2D" parent="." unique_id=1781682337]
visible = false
position = Vector2(894, 602)
texture = ExtResource("5_xim88")

[node name="UI" type="Control" parent="." unique_id=226256464]
layout_mode = 3
anchors_preset = 0
offset_right = 1930.0
offset_bottom = 1088.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI" unique_id=1983123818]
layout_mode = 0
offset_left = 112.0
offset_top = 251.0
offset_right = 812.0
offset_bottom = 1011.0
scale = Vector2(0.67999893, 0.67999893)
theme_override_constants/separation = 80

[node name="PlayButton" type="TextureButton" parent="UI/VBoxContainer" unique_id=747494341]
z_index = 1
layout_mode = 2
texture_normal = ExtResource("7_if7li")

[node name="ColorRect" type="ColorRect" parent="UI/VBoxContainer/PlayButton" unique_id=1460741341]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.84705883, 0.65882355, 0.4627451, 0.52156866)

[node name="Credits" type="TextureButton" parent="UI/VBoxContainer" unique_id=1278021282]
z_index = 1
layout_mode = 2
texture_normal = ExtResource("9_fh7cp")

[node name="ColorRect" type="ColorRect" parent="UI/VBoxContainer/Credits" unique_id=598543288]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.84705883, 0.65882355, 0.4627451, 0.52156866)

[node name="Quit" type="TextureButton" parent="UI/VBoxContainer" unique_id=395956577]
z_index = 1
layout_mode = 2
texture_normal = ExtResource("8_rrcx7")

[node name="ColorRect" type="ColorRect" parent="UI/VBoxContainer/Quit" unique_id=450903121]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.84705883, 0.65882355, 0.4627451, 0.52156866)

[node name="Levantarse" type="AnimatedSprite2D" parent="." unique_id=926518601]
visible = false
position = Vector2(942, 759)
sprite_frames = SubResource("SpriteFrames_h1v62")
frame_progress = 0.103973255

[node name="creditsText" type="Label" parent="." unique_id=174347065]
visible = false
offset_left = -7.0
offset_top = 101.0
offset_right = 1926.0
offset_bottom = 657.0
theme_override_font_sizes/font_size = 62
text = "Luis Cabello - Programming and design
Diego \"Dmontec\" Montenegro - Programming
Mauro Martínez - Programming
Gill Moreno - Programming
Chao - Art
Luis Alonso - Art"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="creditsText" unique_id=604661880]
layout_mode = 0
offset_left = 1629.0
offset_top = 820.0
offset_right = 1803.0
offset_bottom = 897.0
theme_override_font_sizes/font_size = 50
text = "Return"

[connection signal="pressed" from="UI/VBoxContainer/PlayButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="creditsText/Button" to="." method="_on_button_pressed"]
